# dictionary

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  dictionary.db  dictionary.db-shm  dictionary.db-wal
db/migrations/: 001_schema.sql
db/seed/: sample_data.sql
src/: main.cpp
src/core/: dict_bookmark.c  dict_bookmark.h  dict_db.c  dict_db.h  dict_history.c  dict_history.h  dict_search.c  dict_search.h
src/models/: DictManager.cpp  DictManager.h
src/ui/: AppStyle.h  BookmarkWidget.cpp  BookmarkWidget.h  BookmarkWidget.ui  DictionaryView.cpp  DictionaryView.h  DictionaryView.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SearchWidget.cpp  SearchWidget.h  SearchWidget.ui  WordEditorDialog.cpp  WordEditorDialog.h  WordEditorDialog.ui
